--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer components {
-  .button-submit {
+  .btn-submit {
     @apply relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors duration-300;
   }
 
@@ -12,6 +12,6 @@
   }
 
   .th-td {
-    @apply py-3 px-6 text-left text-xs font-medium text-slate-900 tracking-wider;
+    @apply py-3 px-6 text-center text-xs font-medium text-slate-900 tracking-wider;
   }
 }
